--- a/CURSO HTML e CSS - Otavio Miranda/ex010-LandingPage/index.html
+++ b/CURSO HTML e CSS - Otavio Miranda/ex010-LandingPage/index.html
@@ -33,7 +33,7 @@
 
     <!-- TANTECIPANDO UMA PARTE DA LANDINPAGE DO SITE QUE O PROFESSOR VAI FAZER-->
     <section id="fontTabela">
-        <table style="width: 100p%;">
+        <table style="width: 100%;">
             <thead >
                 <caption>Pricing table</caption>
                 <tr>
