--- a/CURSO HTML e CSS - Otavio Miranda/ex003-Formulario/index.html
+++ b/CURSO HTML e CSS - Otavio Miranda/ex003-Formulario/index.html
@@ -6,6 +6,18 @@
     <title>Formulário</title>
 </head>
 <body>
-   <form action="#" method="get"></form>
+   <form action="#" method="get" target="_blank" autocomplete="off">
+        <section>
+            <h1>Cabeça</h1>
+            <p>O Formulário</p>
+        </section>
+        <fieldset style="width: 200px;">
+            <legend>Descrição</legend>
+            <p>
+                <input type="text" name="" id="">
+            </p>
+        </fieldset>
+
+   </form>
 </body>
 </html>
