--- a/CURSO HTML e CSS - Otavio Miranda/ex003-Formulario/index.html
+++ b/CURSO HTML e CSS - Otavio Miranda/ex003-Formulario/index.html
@@ -6,18 +6,18 @@
     <title>Formulário</title>
 </head>
 <body>
-   <form action="#" method="get" target="_blank" autocomplete="off">
-        <section>
-            <h1>Cabeça</h1>
-            <p>O Formulário</p>
-        </section>
-        <fieldset style="width: 200px;">
-            <legend>Descrição</legend>
-            <p>
-                <input type="text" name="" id="">
-            </p>
-        </fieldset>
 
+   <form action="#" method="get" target="_blank" autocomplete="off">
+        <p>O meu Formulário</p>
+        <p>
+            <label for="nome">Nome</label> <br>
+            <input type="text" name="Nome" id="nome" placeholder="Seu nome" required>
+        </p>
+        <p>
+            <input type="submit" value="Enviar">
+            <input type="reset" value="Limpar">
+        </p>
    </form>
+
 </body>
 </html>
