--- a/CURSO HTML e CSS - Otavio Miranda/ex010-LandingPage/index.html
+++ b/CURSO HTML e CSS - Otavio Miranda/ex010-LandingPage/index.html
@@ -1,79 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        table, th, td {
-            border: 1px solid rgba(233, 232, 232, 0.89);
-            border-collapse: collapse;
-            width: 200px;
-            padding: 10px;
-            margin-left: 20px;
-        }
-        th {
-            background-color: rgba(233, 232, 232, 0.89);
-            text-align: left;
-        }
-
-        caption {
-            text-align: left;
-            font-style: italic;
-            padding: 10px;
-        }
-
-        div#fontTabela {
-            font-family: sans-serif;
-            display: block;
-        }
-    </style>
+    <title>Landing Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
-<body>
+<body class="main-bg">
+     <aside class="menu">
+        <section class="main-content menu-content">
+            <h1>
+                <a href="#">LOGO</a>
+            </h1>
 
-    <!-- TANTECIPANDO UMA PARTE DA LANDINPAGE DO SITE QUE O PROFESSOR VAI FAZER-->
-    <div id="fontTabela">
-        <table style="width: 40%;">
-        <caption>Pricing table</caption>
-            <thead >
-                <tr>
-                    <th style="width: 40%;">Title 1</th>
-                    <th>Title 2</th>
-                    <th>Title 3</th>
-                </tr>
-            </thead>
-                <tbody>
-                    <tr>
-                        <td>Content 1</td>
-                        <td>Content 2</td>
-                        <td>Content 3</td>
-                    </tr>
-                    <tr>
-                        <td>Content 1</td>
-                        <td>Content 2</td>
-                        <td>Content 3</td>
-                    </tr>
-                    <tr>
-                        <td>Content 1</td>
-                        <td>Content 2</td>
-                        <td>Content 3</td>
-                    </tr>
-                    <tr>
-                        <td rowspan="2">SPAN DOWN</td>
-                        <td>Content 2</td>
-                        <td>Content 3</td>
-                    </tr>
-                    <tr>
-                        <td>Content 2</td>
-                        <td>Content 3</td>
-                    </tr>
-                </tbody>
-                <tfoot>
-                    <tr>
-                        <td colspan="3">Footer 1</td>
-                    </tr>
-                </tfoot>
-        </table>
-    </div>
+            <nav>
+                <ul>
+                    <li><a href="#">intro</a></li>
+                    <li><a href="#">top 3</a></li>
+                    <li><a href="#">gallery</a></li>
+                    <li><a href="#">work</a></li>
+                    <li><a href="#">contact</a></li>
+                </ul>
+            </nav> 
+        </section>
+     </aside>
+
+     <section class="section"></section>
+     <section class="section"></section>
 </body>
 </html>
