--- a/CURSO HTML e CSS - Otavio Miranda/ex010-LandingPage/index.html
+++ b/CURSO HTML e CSS - Otavio Miranda/ex010-LandingPage/index.html
@@ -199,7 +199,28 @@
                 <img src="img/javascript.svg" alt="Logo de HTML, CSS e JS">
             </div>
             <div class="contact-form">
-                <img src="img/javascript.svg" alt="Logo de HTML, CSS e JS">
+                <fieldset class="form-grid">
+                    <legend>Contact me</legend>
+                    <div class="form-group">
+                        <label for="First-name">First name</label>
+                        <input type="text" name="First-name" id="First-name" placeholder="Your name" >
+                    </div>
+                    <div class="form-group">
+                        <label for="last-name">Last name</label>
+                        <input type="text" name="last-name" id="last-name" placeholder="Your last name">
+                    </div>
+                    <div class="form-group full-width">
+                        <label for="email">Email</label>
+                        <input type="email" name="email" id="email" placeholder="Your good e -mail">
+                    </div>
+                    <div class="form-group full-width">
+                        <label for="message">Message</label>
+                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Your message"></textarea>
+                    </div>
+                    <div class="form-group full-width">
+                        <button type="submit">Send Message</button>
+                    </div>
+                </fieldset>
             </div>
         </div>
 
