--- a/CURSO HTML e CSS - Otavio Miranda/ex010-LandingPage/index.html
+++ b/CURSO HTML e CSS - Otavio Miranda/ex010-LandingPage/index.html
@@ -231,5 +231,7 @@
      <footer id="footer" class="footer white-bg">
         <p><a rel="nofollow" href="https://beacons.ai/otaviomiranda" target="_blank">Feito com <span class="heart">❤</span> por Otávio Miranda</a></p>
      </footer>
+
+     <a class="back-to-top" href="#home">➤</a>
 </body>
 </html>
